--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "babel": "4.7.16",
+    "backbone": "^1.1.2",
     "bootstrap": "3.3.4",
     "eventemitter3": "0.1.6",
     "express": "4.12.3",
@@ -18,6 +19,7 @@
     "flux": "2.0.1",
     "front-matter": "1.0.0",
     "jade": "1.9.2",
+    "jquery": "^2.1.3",
     "lodash": "3.6.0",
     "react": "0.13.1",
     "superagent": "1.1.0"
